--- a/esi/config.yaml.template
+++ b/esi/config.yaml.template
@@ -2,7 +2,7 @@ client_id:
 client_secret: 
 auth_url: "https://login.eveonline.com/v2/oauth/authorize/"
 token_url: "https://login.eveonline.com/v2/oauth/token"
-character_id: 
 redirect_uri: "eveauth-app://callback/"
 scopes:
   - "esi-assets.read_assets.v1"
+  - "esi-markets.read_character_orders.v1"
